--- a/backend/package.json
+++ b/backend/package.json
@@ -10,24 +10,28 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/multipart": "^9.3.0",
+    "@fastify/oauth2": "^8.1.2",
     "@fastify/static": "^8.3.0",
+    "@fastify/websocket": "^11.2.0",
+    "bcrypt": "^5.1.1",
     "fastify": "^5.0.0",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "ws": "^8.13.0",
-    "bcrypt": "^5.x"
+    "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.x",
     "@types/node": "^20.19.23",
+    "@types/qrcode": "^1.5.6",
+    "@types/speakeasy": "^2.0.10",
     "@types/sqlite3": "^5.1.0",
-    "@types/ws": "^8.5.5",
+    "@types/ws": "^8.18.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
-    "@types/bcrypt": "^5.x",
-    "@types/qrcode": "^1.5.6",
-    "@types/speakeasy": "^2.0.10"
+    "typescript": "^5.2.2"
   }
 }
