--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,9 @@ Thumbs.db
 # ----------------------
 # Environment files
 # ----------------------
-.env
-.env.local
-.env.*.local
+#.env
+#.env.local
+#.env.*.local
 
 # ----------------------
 # Editor / IDE files
